# golang

./: .gitignore  Makefile  README.md  makefile  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish_to_testpypi.yml  test-publish-pypi.yml
golang/: __init__.py  __version__.py
golang/__internal__/: __init__.py  env.py  run.py  utils.py
golang/testdata/gocode/code1/: main.go
