#[build-system]
#requires = []
#build-backend = ""

[project]
name = "golang"
version = "0.0.1"
#dependencies = []
requires-python = ">=3.8"
authors = [
    { name = "menduo", email = "shimenduo@gmail.com" },
]
maintainers = [
    { name = "menduo", email = "shimenduo@gmail.com" },
]
description = "run Go code in Python"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["go", "golang", ]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

#[project.optional-dependencies]
#gui = []
#cli = []

[project.urls]
Homepage = "https://github.com/menduo/golang"
Documentation = "https://github.com/menduo/golang"
Repository = "https://github.com/menduo/golang.git"
"Bug Tracker" = "https://github.com/menduo/golang/issues"
Changelog = "https://github.com/menduo/golang/blob/master/CHANGELOG.md"

#[project.scripts]
#
#[project.gui-scripts]

